--- a/app1/dockerfile
+++ b/app1/dockerfile
@@ -3,3 +3,4 @@ RUN apt update
 RUN apt install net-tools
 RUN apt install telnet -y
 RUN apt install vim-tiny -y
+COPY index.html /usr/share/nginx/html/index.html
