--- a/lb/nginx.conf
+++ b/lb/nginx.conf
@@ -27,6 +27,6 @@ http {
  upstream backend {
         server 172.17.0.2:80;
         server 172.17.0.3:80;
-        
+        server 172.17.0.4:80;
                   }
    }
