--- a/app2/dockerfile
+++ b/app2/dockerfile
@@ -1,6 +1,8 @@
 FROM nginx
 RUN apt update
 RUN apt install net-tools
-RUN apt install telnet -y
-RUN apt install vim-tiny -y
+RUN apt-get install -y iputils-ping
+RUN apt-get install -y inetutils-traceroute
+RUN apt-get install -y iproute2
+RUN apt-get install -y curl telnet dnsutils vim vim-tiny
 COPY index.html /usr/share/nginx/html/index.html
