--- a/lb/dockerfile
+++ b/lb/dockerfile
@@ -2,7 +2,9 @@
 FROM nginx
 RUN apt update
 RUN apt install net-tools
-RUN apt install telnet -y
-RUN apt install vim-tiny -y
+RUN apt-get install -y iputils-ping
+RUN apt-get install -y inetutils-traceroute
+RUN apt-get install -y iproute2
+RUN apt-get install -y curl telnet dnsutils vim vim-tiny
 # Copy the custom configuration file to the appropriate location
 COPY nginx.conf /etc/nginx/nginx.conf
